--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ NEGOCIO_URL=https://www.yimi.com.mx/negocio
 BACKOFFICE_URL=https://www.yimi.com.mx/reportes
 PDV_URL=https://yimiglobal.com/
 LICENSE_URL=http://34.122.86.104:4002/licences
+HTTPS_PORT=443
