--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "gapi-script": "^1.2.0",
+    "http-errors": "^2.0.0",
+    "log4js": "^6.7.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
